# framer-marketplace-scraper-py

./: .cursorrules  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  AUDYT_ZGODNOSCI.md  CHANGELOG.md  DOCUMENTATION_AUDIT.md  Dockerfile  GITHUB_SETUP.md  MAINTENANCE_REPORT.md  NEXT_STEPS.md  README.md  RUN_WORKFLOWS.md  WORKFLOWS_EXPLANATION.md  WORKFLOW_STATUS_CHECK.md  ZGODNOSC_DOKUMENTACJA.md  coverage.xml  monitor_scraper.sh  nixpacks.toml  push_to_github.sh  pyproject.toml  pytest.ini  railway.json  requirements.txt  run_workflow.sh  run_workflow_ci.sh
api/: __init__.py  cache.py  dependencies.py  main.py
cursor documentation and rules/: API_IMPLEMENTATION_CHECKLIST.md  API_SPECIFICATION.md  IMPLEMENTATION_GUIDE.md  PRODUCT_ROADMAP.md  PROPOZYCJA_ARCHITEKTURY.md  README.md  REKOMENDACJE_SCRAPERA_FRAMER.md  STACK_TECHNICZNY.md  TECHNICAL_BACKLOG.md  TESTING_AND_FIXTURES.md  requirements.txt
cursor_rules/: agents.md  analytics.md  api.md  data_integrity.md  dev_workflow.md  frontend.md  insights.md  metrics.md  project.md  scraper.md
docs/: API_CATEGORIES_VIEWS_EXAMPLES.md  API_CREATORS_ANALYSIS_EXAMPLES.md  API_ENDPOINTS_LIST.md  API_PRODUCTS_EXAMPLES.md  BRANCHES_ANALYSIS_REPORT.md  CATEGORY_MAPPING.md  CHANGELOG_FEATURE_1.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASHBOARD_NEXT_STEPS.md  DASHBOARD_PERFORMANCE_OPTIMIZATION.md  DEPLOYMENT_PLAN.md  END_TO_END_TEST_REPORT.md  N1_QUERIES_ANALYSIS.md  PERFORMANCE_TEST_RESULTS.md  PRODUCTION_API_TEST_REPORT.md  SUPABASE_LOCAL_CONNECTION.md  TESTING_DASHBOARD.md  TESTING_PERFORMANCE_OPTIMIZATIONS.md  TESTING_PLAN.md
documentation_sources/: PROPOZYCJA_ARCHITEKTURY.md  REKOMENDACJE_SCRAPERA_FRAMER.md  STACK_TECHNICZNY.md  requirements-dev.txt
frontend/: components.json  next.config.js  package-lock.json  package.json
scripts/: add_categories_column.py  check_categories_status.py  check_views_change_24h.py  download_github_artifacts.py  export_data.py  fix_creator_names.py  quick_test.sh  (+11 more)
(+59 files in other folders)
